--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,24 @@
 
 .container {
 margin-top: 50px;
+
+
+}
+
+.input-value{
 text-align: center;
+    border: solid gray 1px;
+    width: 500px;
+    height: 40px;
+    
+}
+
+button{
+
+    text-align: right;
+}
+input{
+    width: 500px;
+    height: 40px;
 
 }
